--- a/p1.html
+++ b/p1.html
@@ -57,8 +57,10 @@
 					<input type="text" id="Width" name="Width">
 				</article>
 				<input type="submit" value="Submit">
+                <input type="submit" value="Convert">
 			</form>
                         </section>
+                        
 					</div>
 
 				<!-- Footer -->
@@ -73,6 +75,7 @@
 									<h2>Find me here:</h2>
 									<ul class="icons">
 										<li><a href="https://github.com/ElementalMinecraftGaming" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                                        <li><a href="https://twitter.com/thenbs?lang=en" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
