--- a/pick.html
+++ b/pick.html
@@ -35,8 +35,6 @@ document.nav.SelectURL.options[document.nav.SelectURL.selectedIndex].value" TARG
 SELECTED>Please select an option:
 <OPTION VALUE="p2.html">
 Window Model
-<OPTION VALUE="p3.html">
-Door Model
 <OPTION VALUE="p1.html">
 Chair Model
 </SELECT><DIV>
@@ -56,6 +54,7 @@ Chair Model
 									<h2>Find me here:</h2>
 									<ul class="icons">
 										<li><a href="https://github.com/ElementalMinecraftGaming" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                                         <li><a href="https://twitter.com/thenbs?lang=en" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
