--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta name="google-site-verification" content="7s7D0JSkt3wZ1JgOV8rCTd1MYwPiL1RNy2z_uF1c5Lg" />
+        <link rel="icon" href="images/nbs.jfif" sizes="16x16" type="image/png">
 	</head>
 	<body class="is-preload">
 
@@ -16,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/3DMM.jpg" alt="" /></span>
+						<span class="logo"><img src="images/nbs.jfif" alt="" /></span>
 						<h1>NBS Project</h1>
 						<p>NBS 3D Models</p>
 					</header>
@@ -40,6 +41,7 @@ are even released to other websites. <br>
 Enjoy!</p>
 										<ul class="actions">
 											<li><a href="pick.html" class="button">Search Products</a></li>
+                                            <li><a href="purchase.html" class="button">Payments</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/3dM.jpg" alt="" /></span>
