--- a/feedback.html
+++ b/feedback.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Search and build</strong> by NBS</a></h1>
+						<h1><a href="index.html"><strong>Feedback</strong> by NBS</a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
@@ -37,11 +37,14 @@
 
     <label for="lname">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    
+    <label for="lmail">mail</label>
+    <input type="text" id="lmail" name="mail" placeholder="mail">
 
     <label for="country">Country</label>
     <select id="country" name="country">
       <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
+      <option value="canada">England</option>
       <option value="usa">USA</option>
     </select>
 
@@ -89,3 +92,4 @@
 
 	</body>
 </html>
+
