--- a/purchase.html
+++ b/purchase.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assetss/css/main.css" />
 		<noscript><link rel="stylesheet" href="assetss/css/noscript.css" /></noscript>
+        <link rel="icon" href="images/nbs.jfif" sizes="16x16" type="image/png">
 	</head>
 	<body class="is-preload">
 
@@ -88,14 +89,18 @@
 </head>
 <body>
 
-<h2 style="text-align:center">Pricing</h2>
+<h1 style="text-align:center">Pricing</h1>
 <p style="text-align:center">Look at our pricing.</p>
 
 <div class="columns">
   <ul class="price">
     <li class="header">Basic</li>
-    <li class="grey">$ 9.99 / year</li>
-    <li>Coming soon</li>
+    <li class="grey">$19.99 / Month</li>
+     <li>10 Models</li>
+      <li>1GB Storage</li>
+      <li>35 Conversions</li>
+      <li>Small Advertising</li>
+      <li>Small publicity </li>
     <li class="grey"><a href="#" class="button">Sign Up</a></li>
   </ul>
 </div>
@@ -103,8 +108,12 @@
 <div class="columns">
   <ul class="price">
     <li class="header" style="background-color:#4CAF50">Pro</li>
-    <li class="grey">$ 24.99 / year</li>
-    <li>Coming soon</li>
+    <li class="grey">$124.99 / Month</li>
+     <li>250 Models</li>
+      <li>2GB Storage</li>
+      <li>Unlimited Conversions</li>
+      <li>Medium Advertising</li>
+      <li>Loads of publicity </li>
     <li class="grey"><a href="#" class="button">Sign Up</a></li>
   </ul>
 </div>
@@ -112,8 +121,12 @@
 <div class="columns">
   <ul class="price">
     <li class="header">Premium</li>
-    <li class="grey">$ 49.99 / year</li>
-    <li>Coming soon</li>
+    <li class="grey">$149.99 / Month</li>
+    <li>Unlimited Models</li>
+      <li>Unlimited Storage</li>
+      <li>Unlimited Conversions</li>
+      <li>Unlimited Advertising</li>
+      <li>Loads of publicity </li>
     <li class="grey"><a href="#" class="button">Sign Up</a></li>
   </ul>
 </div>
