--- a/pick.html
+++ b/pick.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assetss/css/main.css" />
 		<noscript><link rel="stylesheet" href="assetss/css/noscript.css" /></noscript>
+        <link rel="icon" href="images/nbs.jfif" sizes="16x16" type="image/png">
 	</head>
 	<body class="is-preload">
 
