--- a/p2.html
+++ b/p2.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assetss/css/main.css" />
 		<noscript><link rel="stylesheet" href="assetss/css/noscript.css" /></noscript>
+        <link rel="icon" href="images/nbs.jfif" sizes="16x16" type="image/png">
 	</head>
 	<body class="is-preload">
 
@@ -25,7 +26,7 @@
 
 				<!-- Main -->
 					<div id="main">
-                        <img border="0" alt="gone" src="images/window.jfif" width="950" height="890">
+                        <img border="0" alt="gone" src="images/window.jfif" width="520" height="550">
 						<section>
                         <form action="https://nbs-utc-demo.azurewebsites.net/api/bimobject" method="post">
 				<article class="group">
