--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Enjoy!</p>
 										<ul class="actions">
 											<li><a href="pick.html" class="button">Search Products</a></li>
                                             <li><a href="purchase.html" class="button">Payments</a></li>
+                                            <li><a href="feedback.html" class="button">Feedback</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/3dM.jpg" alt="" /></span>
