--- a/pick.html
+++ b/pick.html
@@ -38,6 +38,8 @@ SELECTED>Please select an option:
 Window Model
 <OPTION VALUE="p1.html">
 Chair Model
+<OPTION VALUE="upload.html">
+Upload
 </SELECT><DIV>
 </FORM>
                         </section>
