--- a/upload.html
+++ b/upload.html
@@ -26,7 +26,7 @@
 
 				<!-- Main -->
 					<div id="main">
-                        <img border="0" alt="gone" src="images/upload.png" width="570" height="550">
+                        <img border="0" alt="gone" src="images/uploadd.png" width="570" height="550">
 						<section>
                         <form action="https://nbs-utc-demo.azurewebsites.net/api/bimobject" method="post">
 				<article class="group">
