--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 										</header>
                                         <p>
 
-Search the products that you need from our fine store of availables. <br>
+Search the products that you need from our fine store of availabilities. <br>
 Our partners have been working on projects for you to use and bring. <br>
 Have fun searching to the website to find your favourite products before they <br>
 are even released to other websites. <br>
