--- a/upload.html
+++ b/upload.html
@@ -37,6 +37,14 @@
 					<label for="Uniclass2015Code">Uniclass 2015 Code</label>
 					<input type="text" id="Uniclass2015Code" name="Uniclass2015Code">
 				</article>
+				<article class="group">
+					<label for="Width">Width</label>
+					<input type="text" id="Width" name="Width">
+				</article>
+				<article class="group">
+					<label for="Height">Height</label>
+					<input type="text" id="Height" name="Height">
+				</article>
 				<input type="submit" value="Convert">
 			</form>
                             
