--- a/pick.html
+++ b/pick.html
@@ -51,7 +51,7 @@ Upload
 							<div>
 								<section>
 									<h2>Sorry</h2>
-									<p>This isn't available right nowm.</p>
+									<p>This isn't available right now.</p>
 								</section>
 								<section>
 									<h2>Find me here:</h2>
