--- a/p2.html
+++ b/p2.html
@@ -70,7 +70,7 @@
 							<div>
 								<section>
 									<h2>About me</h2>
-									<p>I like making minecraft bedrock server plugins and want everyone to see them and enjoy them.</p>
+									<p>Description not available.</p>
 								</section>
 								<section>
 									<h2>Find me here:</h2>
